<resources>
    <string name="app_name">MyContactsApp</string>
    <string name="my_contacts">My Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="title_activity_main">My Contacts</string>
    <string name="test_contact_no">9999999999</string>
    <string name="test_contact_name">John Morris</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="full_name">Full Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_reqd">Permission Required</string>
    <string name="permission_reqd_read_msg">Permission is required in order to fetch contact details.</string>
    <string name="permission_reqd_write_msg">Permission is required in order to add new contact.</string>
    <string name="permission_reqd_settings_msg">Please provide permissions from settings.</string>
    <string name="ok">Ok</string>
    <string name="no_thnx">No Thanks</string>
    <string name="add_contact_success">Contact has been added successfully</string>
    <string name="error">There was some error</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_contact_number">Please enter contact number</string>
    <string name="test_initial">M</string>
</resources>
