<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CardViewStyle">

    <LinearLayout style="@style/ContactLinearLayoutStyle">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/ContactConstraintLayoutStyle">

            <androidx.cardview.widget.CardView
                android:id="@+id/contactImgCardView"
                style="@style/ImgCardViewStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/nameInitials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_initial"
                    style="@style/NameInitialsStyle"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/contactName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/test_contact_name"
                style="@style/TitleStyle"
                app:layout_constraintStart_toEndOf="@id/contactImgCardView"
                app:layout_constraintTop_toTopOf="@id/contactImgCardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/contactMobileNo"/>

            <TextView
                android:id="@+id/contactMobileNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/test_contact_no"
                style="@style/SubTitleStyle"
                app:layout_constraintStart_toEndOf="@id/contactImgCardView"
                app:layout_constraintTop_toBottomOf="@id/contactName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/contactImgCardView"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View style="@style/Divider"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>